🥳 1st draft finished!

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -188,9 +188,9 @@ export async function getStaticPaths() {
     )
         .then((res) => res.json())
         .catch(
-      // ...catch some errors...);
-        )
-
+      // ...catch some errors...
+        );
+        
     return [
         ...posts.map(({ data: { slug, title } }) => [
             {
@@ -216,8 +216,8 @@ const { html: postHTML } = await fetch(
 )
     .then((res) => res.json())
     .catch(
-      // ...catch more errors...);
-        )
+      // ...catch more errors...
+      );
 ---
 
 <BaseLayout pageTitle={title}>
@@ -306,14 +306,9 @@ You can add whatever fields You like. Other popular choices are fields that cont
 // ### Creating New Content
 // ### Using Builder's Visual Editor
 
-Make an edit in Builder's editor and click `Publish`. Your content won't be live yet, but you'll learn how to fetch it in the next step. 
-
 What happened now is 
 If you've crreated a blog post with the title, and created a heading and some text in the visual editor...[screenshot]
 To understand our project, let's take a moment at what happened when you create a blog post on builder. 
-
-* A new post is represented by new content using the model `blogpost`. This content has data fields like `title`, `author` and `slug`. You'll be fetching this data through Builder's `content API` [xxx] and use it to display a list of all your pieces of content (in this guide the pieces are blogposts)
-* You used Builder's visual editor to drag-and-drop text, images and media to visually create a blog post. This data is HTML and CSS, different from the data fields associated with our model. You'll fetch this pre-rendered HTML through Builder's `QWIK API` [xxx] and embed it on a dynamic route representing a single piece of content (one blogpost)
 
 until here draft 1
 ---
@@ -324,10 +319,18 @@ To add new content, go to the content section by clicking in the **Content** tab
 
 The data fields you've just created are in the panel on the right under the *options* tab. Fill those in and then add some content to your post! To do that, click on the *+ Add Block* button and add whatever you want - maybe a text field with some text to start with. Here is where you can use the full power of Builder's drag and drop editor and design your blog post to your heart's contents!  
 
-Now that you have your content ready, return to your Astro project and start building your blog.
+When You're ready click on the big blue `Publish` in the upper right. 
+
+The content is now live in the Builder CMS. 
+
+you can preview it already using the preview URL?
+
+To actually connect this content with your website, you'll create a catch-all route that fetches and renders it.
 
 ### Creating the component representing a blog post 
 ### Displaying the Content of a Blogpost
+
+return to your Astro ptoject and create the following file:
 
 <FileTree title="Project Structure">
     - src/pages/posts/**[slug].astro** - .env - astro.config.mjs - package.json
@@ -401,7 +404,7 @@ This file uses Astro's [spread syntax](xxx) and generates a route for each blog 
 The HTML is put into our `<BaseLayout>` matching our `builder-preview` page created in step 1 [xxx]. 
 :::
 
-xxx now you can go to /localhost/pages/foo and should be able to see your blog posts!
+xxx now you can go to /localhost/pages/foo and should be able to see your blog post!
 
 ### Creating a list of all blog posts
 To make a list of all your content, go to your `src/pages` folder create a file called `BlogPostList.astro` with the following content:
@@ -415,14 +418,6 @@ const pageTitle = "My Astro Learning Blog";
 const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
 const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
 
-const handleError = (err) => {
-    // The requested Builder content could not be found.
-    if (err.response.status === 404) {
-        return { data: null };
-    }
-    throw err;
-};
-
 const { results: posts } = await fetch(
     `https://cdn.builder.io/api/v2/content/${builderModel}?${new URLSearchParams(
             {
@@ -433,7 +428,9 @@ const { results: posts } = await fetch(
         ).toString()}`
     )
     .then((res) => res.json())
-    .catch(handleError);
+    .catch(
+            // ...catch some errors...
+    );
 ---
 
 <BaseLayout pageTitle={pageTitle}>
@@ -458,24 +455,15 @@ The magic happens on lines ... and .... `slug` and `title` match the fields you'
 
 In this example we are keeping it simple and olnly fetching the bare necessities to show You how to create a list of blog posts. But You can fetch any data that you've set up in your Builder model - the name of the author, the length of the posts, or the publication date - it all depends on your Builder model. 
 
-
-
-
-
-
-Since you'll be using the name of this model in each API call, it makes sense to set it as an environment variable. See the previous section on how to do that [xxx]. 
-
-
-
 Once your site builds or your dev server runs the code, you should be able to see your first blog post getting listed!
-
-The link isn't working though, since we haven't created the appropiate route yet. 
 
 ### Publishing your site
 
 To deploy your website, visit our [deployment guides](/en/guides/deploy/) and follow the instructions for your preferred hosting provider.
 
-#### Rebuild on Storyblok changes
+xxxchange preview URL?
+
+#### Rebuild on Builder changes
 
 If your project is using Astro's default static mode, you will need to set up a webhook to trigger a new build when your content changes. If you are using Netlify or Vercel as your hosting provider, you can use its webhook feature to trigger a new build from Storyblok events.
 
@@ -483,7 +471,7 @@ If your project is using Astro's default static mode, you will need to set up a 
 
 To set up a webhook in Netlify:
 
-1. Go to your site dashboard and click on **Build & deploy**.
+1. Go to your site dashboard, then **Site Settings** and click on **Build & deploy**.
 
 2. Under the **Continuous Deployment** tab, find the **Build hooks** section and click on **Add build hook**.
 
@@ -499,11 +487,15 @@ To set up a webhook in Vercel:
 
 3. Provide a name for your webhook and the branch you want to trigger the build on. Click **Add** and copy the generated URL.
 
-##### Adding a webhook to Storyblok
+##### Adding a webhook to Builder
 
-In your Storyblok space **Settings**, click on the **Webhooks** tab. Paste the webhook URL you copied in the **Story published & unpublished** field and hit <kbd>Save</kbd> to create a webhook.
+In your Builder dashboard go to **Models**, and click on the **blogpost** model. This is the same spot where You've created Your custom fields `title` and `slug` in a previous step(). Above these fields click on **Show More Options** and then on **Edit Webhooks** at the bottom. Now add a new webhook by clicking on **+ Webhook** and then expand the Webhook that appeared by clicking on it. Paste the URL that was generated by your hosting provider and You're almost there! The last thing to do is to click on **Show Advanced** under the URL field and click the toggle so that the option **Disable Payload** is **enabled**. Click on **Done** and You're done!
 
-Now, whenever you publish a new story, a new build will be triggered and your blog will be updated.
+:::note
+Not doing this can cause the automated build process to break as our website and the payload get bigger and bigger. With the payload disabled, Builder sends a simple POST request each time and we can fetch the data ourselves through the magic of Astro!  
+::::
+
+Now each time You click on the **Publish** button, Builder lets our hosting provider know that we want to rebuild our site and during the build process our websites fetches our newly published data!
 
 ## Official Resources
 
@@ -518,8 +510,11 @@ Now, whenever you publish a new story, a new build will be triggered and your bl
 ## UNUSED copy
 To display each blogpost you'll create a catch-all route [xxx] matching the route `/posts/${slug}` from the previous step [xxx].
 
-NOTES
+## NOTES
 * explain how to structure the data of a blogpost? - what to put in a data field and what to put directly via Builder's drag and drop?
 *** might make more sense to work with components here?
 * following storyblok tutorial this would all be pre-given content and less of a suggestion
 * mb suggest creating a second blog post so we can show the listing of posts later a little more clearly
+* Since you'll be using the name of this model in each API call, it makes sense to set it as an environment variable. See the previous section on how to do that [xxx]. 
+* handling of the error handling? - export funciton?
+* clean up code - import scripts.js in <Baselayout>
