--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -170,7 +170,7 @@ const { results: posts } = await fetch(
 
 If You had a Builder model named `blogPost` and wanted to create a page showing the contents of your blog posts - i.e. whatever you've created in the Builder editor, your component might look like this:
 
-```astro title="[...slug].astro
+```astro title="[slug].astro
 ---
 const builderModel = 'blogPost'
 
@@ -398,7 +398,7 @@ const { html: postHTML } = await fetch(
 </BaseLayout>
 ```
 
-This file uses Astro's [spread syntax](xxx) and generates a route for each blog post, with the slug and content fetched from Builder's ... API. The HTML used here is made of the blocks you put on the page in Builder's editor!    
+This file generates a [dynamic route](https://docs.astro.build/en/core-concepts/routing/#static-ssg-mode) for each blog post based on the `slug` custom data field You filled when You created your blogpost on Builder. The HTML used here is made of the blocks You put on the page in Builder's editor!    
 
 :::note
 The HTML is put into our `<BaseLayout>` matching our `builder-preview` page created in step 1 [xxx]. 
