--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -19,7 +19,7 @@ Builder can connect to your app in various ways. If You are using a JavaScript *
 
 In this guide, you will use connect to your Astro project via [Builder's REST API](xxx). This way, things stay simple - your project doesn't need to use a framework or any client-side JavaScript at all. 
 
-You'll fetch your content at buld time, when Astro is generating your site. Later in this guide [xxx], You'll use webhooks to connect Builder to your hosting provider like Netlify or Vercel. That way, each time you'll make an edit in the Builder app your site gets automatically rebuilt.
+You'll fetch your content at buld time, when Astro is generating your site. Lastly, You'll use webhooks to connect Builder to your hosting provider like Netlify or Vercel. That way, each time you'll make an edit in the Builder app your site gets updated automatically.
 
 ### Prerequisites
 
@@ -41,7 +41,7 @@ To get started, you will need to have the following:
 
 To add your Builder credentials to Astro, create a `.env` file in the root of your project with the following variable:
 
-```ini title=".env"
+```ini title="/.env"
 BUILDER_API_PUBLIC_KEY=YOUR_KEY
 ```
 
@@ -49,10 +49,9 @@ BUILDER_API_PUBLIC_KEY=YOUR_KEY
 At the time of writing, the key for the Builder API we use here is public [xxx] - so you don't have to worry about hiding or encrypting it. 
 :::
 
-You could paste it into your API call directly, but since we'll be making a few of these calls, it makes sense to put it in a separate file that we can access from multiple places. 
+You could paste it into your API call directly, but since we'll be making a few of these calls, it makes sense to put it in a separate file that we can access from multiple places. Learn more about [setting environment variables in Astro](https://docs.astro.build/en/guides/environment-variables/#setting-environment-variables).
 
-
-Now, you should be able to use this environment variable in your project.
+Now, you should be able to use your API key in your project.
 
 Your root directory should now include this new file:
 
@@ -69,18 +68,18 @@ Create or pick an existing model that you'll use to build your site. This guide 
 #### Connecting the Preview URL 
 
 :::info
-[If you want to dig in, read more about the preview URL in the Builder docs](https://www.builder.io/c/docs/html-api#previewing-content-on-your-site).
+If you want to dig in, [read more about the preview URL in the Builder docs](https://www.builder.io/c/docs/html-api#previewing-content-on-your-site).
 :::
 
 To use Builder's drag-and-drop editor, you'll create a page that returns the special `<builder-coponent>`. This component tells Builder where to insert the content from its CMS - it represents the portion of the page that's editable in the Builder app. 
 
 In this guide the `<builder-component>` represents the content of a blog post. Accordingly, we wrap it in our `<BaseLayout>` to simulate how it would look on the final page.
 
-1. Create a file named `builder-preview.astro` in your `/src` folder with the following content:
+1. Create a file named `builder-preview.astro` in your `/pages` folder with the following content:
 
-```astro title="builder-preview.astro"
+```astro title="src/pages/builder-preview.astro"
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
 const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
@@ -101,13 +100,17 @@ const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
 </BaseLayout>
 ```
 
-2. Set a preview URL in your model [xxx] - in this project it is `https://localhost:3000/builder-preview`. Don't forget the `https` part! 
+2. Start your astro project site (e.g. start dev server) and go to the route corresponding to the file you just created. Copy the URL. It might be something like `https://localhost:3000/builder-preview`. The exact URL will depend on your project environment.
+
+3. With the URL copied, in your Builder space, go to the **Models** tab, pick the model that you've created and paste it in the **Preview URL** field. Make sure the URL is complete, including the `https` part! 
 
 :::note
-We picked `localhost:3000` since this is the address where we are developing our project. Later, when our site is deployed, we will change our preview URL to match our production URL like `https://myBlog.com/builder-preview`.
+When you deploy your site, change the preview URL to match your production URL like `https://myBlog.com/builder-preview`.
 :::
 
-Now when you go to the Builder app preview (read [here](xxx) how to do that - go to content and create new->Blogpost) you should see your `<BaseLayout>` with a big inviting space in between!
+4. In your Builder space under the **Content** tab, click on **New** to create a new content entry and if a list pops up choose the model you just created.
+
+5. In the Builder editor that just opened, you should be able to see your site with a big inviting **+ Add Block** in between!
 
 [screenshot]xxx
 
@@ -115,17 +118,21 @@ Now when you go to the Builder app preview (read [here](xxx) how to do that - go
 **Troubleshooting**
 
 Things can sometimes go wrong when setting up the preview. If the preview doesn't work, you can try one of the following things:
+
 * Make sure that the routes match exactly - your Astro route and the one in your Builder preview-URL. Watch out for typos!
 * Make sure you include the full URL including the protocol (like `https://`)
-* Make sure the site is live -  
+* Make sure the site is live - your server is running 
+* If you're working in a virtual environment like *Stackblitz* or *Gitpod*, you might have to go through this process again when you restart your workspace, since this usually generates a new URL for your project.
 
-Read Builder's troubleshooting guide for more help. [xxx]
+For more help, read (Builder's troubleshooting guide)[https://www.builder.io/c/docs/guides/preview-url-working].
 :::
 
 #### Fetching data
 (xxx work on this --- simplify)
 
-To test this setup, create a new piece of content for the [section model you've set up in step 3](configuring builder). To fetch your data from the Builder CMS, you can simply make a fetch request to one of Builder's REST APIs. 
+To test this setup, create a new piece of content for the [section model you've set up in step 3](configuring builder). In Builder's editor click on **+ Add Block** and add some text.
+
+.To fetch your data from the Builder CMS, you can simply make a fetch request to one of Builder's REST APIs. 
 
 Which API should You use? It depends on what kind of data you'd like to fetch:
 
@@ -518,3 +525,17 @@ To display each blogpost you'll create a catch-all route [xxx] matching the rout
 * Since you'll be using the name of this model in each API call, it makes sense to set it as an environment variable. See the previous section on how to do that [xxx]. 
 * handling of the error handling? - export funciton?
 * clean up code - import scripts.js in <Baselayout>
+
+## TODO
+[x] write draft
+[] follow the tutorial: general connecting  
+* its a little odd to find <BaseLayout> in the very first code example
+* also, BUILDER_BLOGPOST_MODEL
+* might simplify the first part by making it a **page** model
+[] follow the tutorial: build blog
+[] dynamic preview URL??????
+[] fix typos -- AI
+[] go through code -- AI 
+[] revise, simplify, clarify -- AI
+[] add links
+[] add screenshots 
