code added to unit 2

--- a/src/content/docs/en/islands/2-client-directives.mdx
+++ b/src/content/docs/en/islands/2-client-directives.mdx
@@ -28,6 +28,137 @@ import CompletionConfetti from '~/components/tutorial/CompletionConfetti.astro';
 
 CONTENT - Add various client directives to components
 
+1. STARTING CODE:
+
+```astro title="src/pages/products/[id].astro"
+---
+import Layout from "../../layouts/Layout.astro";
+import products from "../../data/products.json";
+
+export function getStaticPaths() {
+  const pages = products.map((product) => ({
+    params: { id: product.id },
+    props: { product },
+  }));
+
+  return pages;
+}
+
+const { product } = Astro.props;
+---
+
+<Layout title={product.title}>
+  <article class="flex flex-col sm:flex-row sm:gap-8">
+    <img
+      class="w-full mb-4 sm:mb-0 rounded-md"
+      src={product.image}
+      alt={product.title}
+    />
+    <div class="flex flex-col gap-4 w-full">
+      <h1 class="text-xl font-semibold sm:text-3xl">{product.title}</h1>
+      <p>$ {product.price.toFixed(2)}</p>
+      <p>{product.description}</p>
+    </div>
+  </article>
+</Layout>
+```
+Screenshot:
+
+![A product page for a wool cap, showing a product name, image, description and cost.](/assets/islands-2-product-page-no-add-to-cart.png)
+
+2. ADD THE `<AddToCart />` component CODE
+
+```astro title="src/pages/products/[id].astro" ins={4, 28-35}
+---
+import Layout from "../../layouts/Layout.astro";
+import products from "../../data/products.json";
+import { AddToCart } from "../../components/AddToCart";
+
+export function getStaticPaths() {
+  const pages = products.map((product) => ({
+    params: { id: product.id },
+    props: { product },
+  }));
+
+  return pages;
+}
+
+const { product } = Astro.props;
+---
+
+<Layout title={product.title}>
+  <article class="flex flex-col sm:flex-row sm:gap-8">
+    <img
+      class="w-full mb-4 sm:mb-0 rounded-md"
+      src={product.image}
+      alt={product.title}
+    />
+    <div class="flex flex-col gap-4 w-full">
+      <h1 class="text-xl font-semibold sm:text-3xl">{product.title}</h1>
+      <p>$ {product.price.toFixed(2)}</p>
+      <AddToCart
+        product={{
+          id: product.id,
+          name: product.title,
+          price: product.price,
+          image: product.image,
+        }}
+      />
+      <p>{product.description}</p>
+    </div>
+  </article>
+</Layout>
+```
+
+SCREENSHOT: 
+
+![The same product page for a wool cap, but now also showing a counter to add or subtract quantities, and an add to cart button.](/assets/islands-2-product-page-including-add-to-cart.png)
+
+3. Hydrate the component
+
+```astro title="src/pages/products/[id].astro" ins={29}
+---
+import Layout from "../../layouts/Layout.astro";
+import products from "../../data/products.json";
+import { AddToCart } from "../../components/AddToCart";
+
+export function getStaticPaths() {
+  const pages = products.map((product) => ({
+    params: { id: product.id },
+    props: { product },
+  }));
+
+  return pages;
+}
+
+const { product } = Astro.props;
+---
+
+<Layout title={product.title}>
+  <article class="flex flex-col sm:flex-row sm:gap-8">
+    <img
+      class="w-full mb-4 sm:mb-0 rounded-md"
+      src={product.image}
+      alt={product.title}
+    />
+    <div class="flex flex-col gap-4 w-full">
+      <h1 class="text-xl font-semibold sm:text-3xl">{product.title}</h1>
+      <p>$ {product.price.toFixed(2)}</p>
+      <AddToCart
+       client:load
+        product={{
+          id: product.id,
+          name: product.title,
+          price: product.price,
+          image: product.image,
+        }}
+      />
+      <p>{product.description}</p>
+    </div>
+  </article>
+</Layout>
+```
+
 <Box icon="puzzle-piece">
 ## Try it yourself - Hydrate a component (placeholder content)
 
