chore:applied suggestions

--- a/src/content/docs/es/guides/integrations-guide/node.mdx
+++ b/src/content/docs/es/guides/integrations-guide/node.mdx
@@ -64,7 +64,7 @@ Si prefieres instalar el adaptador manualmente, completa los siguientes dos paso
 
 Controla si el adaptador construye en modo `middleware` o `standalone`.
 
-*   El modo `middleware` permite el uso de la salida construida como middleware para otro servidor de Node.js, como Express.js o Fastify.
+*   El modo `middleware` permite que la salida generada se utilice como middleware para otro servidor de Node.js, como Express.js o Fastify.
     ```js
     import { defineConfig } from 'astro/config';
     import node from '@astrojs/node';
@@ -76,7 +76,7 @@ Controla si el adaptador construye en modo `middleware` o `standalone`.
       }),
     });
     ```
-*   El modo `standalone` permite construir un servidor que inicia automáticamente cuando el módulo de entrada se ejecuta. Esto te permite desplegar tu construcción a un host sin ningún código adicional.
+*   El modo `standalone` permite construir un servidor se que inicia automáticamente cuando el módulo de entrada se ejecuta. Esto te permite desplegar tu construcción a un host sin ningún código adicional.
 
 ## Uso
 
@@ -124,7 +124,7 @@ Ten en cuenta que el modo middleware no sirve de archivos. Necesitarás configur
 
 ### Standalone
 
-En modo standalone, un servidor inicia cuando el punto de entrada del servidor se ejecuta. De forma predeterminada se construye a `./dist/server/entry.mjs`. Puedes ejecutarlo con:
+En el modo standalone, un servidor se inicia cuando el punto de entrada del servidor se ejecuta. De forma predeterminada se construye a `./dist/server/entry.mjs`. Puedes ejecutarlo con:
 
 ```shell
 node ./dist/server/entry.mjs
@@ -134,7 +134,7 @@ Para el modo standalone, el servidor maneja el servidor de archivos además de l
 
 #### Host y puerto personalizados
 
-Puede anular el host y el puerto en los que se ejecuta el servidor independiente pasándolos como variables de entorno en tiempo de ejecución:
+Puedes anular el host y el puerto en los que se ejecuta el servidor independiente pasándolos como variables de entorno en tiempo de ejecución:
 
 ```shell
 HOST=0.0.0.0 PORT=3000 node ./dist/server/entry.mjs
@@ -142,7 +142,7 @@ HOST=0.0.0.0 PORT=3000 node ./dist/server/entry.mjs
 
 #### HTTPS
 
-Por defecto el servidor standalone usa HTTP. Esto funciona bien si tienes un servidor proxy delante de él que hace HTTPS. Si necesitas que el servidor standalone ejecutre HTTPS por sí mismo, necesitas proveer tu llave SSL y certificado.
+Por defecto el servidor standalone usa HTTP. Esto funciona bien si tienes un servidor proxy delante de él que hace HTTPS. Si necesitas que el servidor standalone ejecute HTTPS por sí mismo, necesitas proveer tu llave SSL y certificado.
 
 Puedes pasar la ruta a tu llave y certificado a través de las variables de entorno `SERVER_CERT_PATH` y `SERVER_KEY_PATH`. Así es como podrías pasarlas en bash:
 
@@ -184,6 +184,6 @@ Este paquete es mantenido por el equipo central de Astro. ¡Eres bienvenido a en
 
 ## Changelog
 
-Mira el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/node/CHANGELOG.md) para ver el historial de cambios de esta integración.
+Consulta el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/node/CHANGELOG.md) para ver el historial de cambios de esta integración.
 
 [astro-integration]: /es/guides/integrations-guide/
