--- a/src/content/docs/es/guides/integrations-guide/vercel.mdx
+++ b/src/content/docs/es/guides/integrations-guide/vercel.mdx
@@ -162,7 +162,7 @@ import astroLogo from "../assets/logo.png";
 ---
 <!-- Este componente -->
 <Image src={astroLogo} alt="My super logo!" />
-<!-- se convertirá en el siguiente HTML -->
+<!-- se convertirá en el siguiente elemento de HTML -->
 <img src="/_vercel/image?url=_astro/logo.hash.png&w=...&q=..." alt="My super logo!" loading="lazy" decoding="async" width="..." height="..." />
 ```
 
