--- a/src/content/docs/en/recipes/reading-time.mdx
+++ b/src/content/docs/en/recipes/reading-time.mdx
@@ -11,7 +11,7 @@ Plugins can be used extend Markdown with new capabilities. In this recipe, you'l
 
 ## Prerequisites
 
-- The [remark plugin](/en/guides/markdown-content/#markdown-plugins).
+- None, the [remark plugin](/en/guides/markdown-content/#markdown-plugins) is built in to Astro.
 
 ## Recipe
 
