translate missing sections

--- a/src/content/docs/es/guides/integrations-guide/lit.mdx
+++ b/src/content/docs/es/guides/integrations-guide/lit.mdx
@@ -112,7 +112,7 @@ import {MyElement} from '../components/my-element.js';
 
 El renderizador maneja automáticamente la adición de los polifills adecuados para brindar soporte en navegadores que no tienen Declarative Shadow DOM. El polifill tiene un tamaño aproximado de *1.5kB*. Si el navegador admite Declarative Shadow DOM, se cargan menos de 250 bytes (para detectar la compatibilidad con la función).
 
-Hydration is also handled automatically. You can use the same hydration directives such as `client:load`, `client:idle` and `client:visible` as you can with other libraries that Astro supports.
+La hidratación también se maneja automáticamente. Puedes usar las mismas directivas de hidratación, como `client:load`, `client:idle` y `client:visible`, como lo harías con otras bibliotecas compatibles con Astro.
 
 ```astro
 ---
@@ -122,7 +122,7 @@ import {MyElement} from '../components/my-element.js';
 <MyElement client:visible />
 ```
 
-The above will only load the element's JavaScript when the user has scrolled it into view. Since it is server rendered they will not see any jank; it will load and hydrate transparently.
+Lo anterior solo cargará el JavaScript del elemento cuando el usuario lo haya desplazado a la vista. Dado que se renderiza en el servidor, el usuario no verá ningún parpadeo; se cargará y se hidratará de manera transparente.
 
 ## Solución de problemas
 
