--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -182,24 +182,23 @@ By the end of this guide you'll have a website that
 * ✅ has a base layout, managed with Astro 
 * ✅ has blog posts which can be edited in Builder's visual editor
 * ✅ is totally static with 0 client side JavaScript
-* ✅ automatically updates each time you change something on Builder
+* ✅ automatically updates each time you change something in Builder
 
 ### Prerequisites
 
 1. **A Builder space** - For this tutorial, we recommend using a new space. If you already have a space with Builder, feel free to use it, but you will need to modify the code to match the model name and custom data fiels.
 
-2. **An Astro project integrated with Builder** - See [integrating with Astro](#integrating-with-astro) for instructions on how to set up the integration.
+2. **An Astro project integrated with a Builder section model** - Follow [the guide above](#integrating-with-astro) to set this up.
 
 
 ### Creating A Base Layout
-Create the layout you'll be using to show a single blog post:
+Create the greater layout in which you'll later embed each blog post:
 
 ```astro title='/src/layouts/BaseLayout'
 ---
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-
 const { pageTitle } = Astro.props;
 ---
 
@@ -223,12 +222,12 @@ const { pageTitle } = Astro.props;
 </html>
 ```
 
-This `BaseLayout` is the same as you'd be left with at the end of our [getting started with Astro tutorial ](xxx).
+This `BaseLayout` is the same as you'd be left with at the end of the [getting started with Astro tutorial](xxx).
 
-The idea here is to have the content of the <Header> and <Footer> come from Astro files, while the blog post will go into the <slot>. You'll create a blog post via the Builder app in the next step. 
+The idea here is to have the content of the <Header> and <Footer> come from Astro files, while the blog post will go into the <slot>. You'll create a blog post in the Builder app in the next step. 
 
 :::note
-This is one workflow among many. It demonstrates how You could split up the development of a site - the writers can design posts using Builder's visual interface, while other teams can handle more perennial content or technical stuff. 
+This is one workflow among many. It demonstrates how You could split up the development of a site - the writers can design posts using Builder's visual editor, while other teams can handle more technical stuff or more perennial content such as the header and footer. 
 
 Experiment with other setups and find one that suits your team's needs!
 :::
@@ -237,12 +236,14 @@ Experiment with other setups and find one that suits your team's needs!
 
 Follow [Builder's official tutorial](https://www.builder.io/blog/creating-blog) for creating a blog post model - it has gifs!
 
-In short, to create a model for your blogpost go to the Builder app and click on the **Models** tab. Click on the <kbd>+ Create Model</kbd> button and create a model of the type `section`. A section model means that the content can sit between other elements of a page - like the <Header> and <Footer> that are part of our `<BaseLayout>`! 
+In short, to create a model for your blogpost go to the Builder app and click on the **Models** tab. Click on the <kbd>+ Create Model</kbd> button and create a model of the type `section` (or go to an existing section model You want to use for this tutorial). A section model means that the content can sit between other elements of a page - like the <Header> and <Footer> that are part of our <BaseLayout>! 
 
-In that new model add some fields. This will be the data *about* a blog post (as opposed to the content itself). For this tutorial add the following fields:
+In that new model add 2 custom fields by clicking **+ New Custom Field**. This will be the data *about* a blog post (as opposed to the content itself). For this tutorial add the following fields:
 
-   - `title` - A text field
-   - `slug` - A text field
+   - `title` - A required field of the type `text` with the default `_`
+   - `slug` - Again, a required field of the type `text` with the default `_`
+
+The default values don't really matter at this point, but we want to make sure there is always something here, since you'll be relying on this data when building your site.
 
 :::note
 You can add whatever fields You like. Other popular choices are fields that contain the author's name, the date of publication or the image to be used for the post.  
@@ -252,14 +253,11 @@ You can add whatever fields You like. Other popular choices are fields that cont
 // ### Creating New Content
 // ### Using Builder's Visual Editor
 
-What happened now is 
-If you've crreated a blog post with the title, and created a heading and some text in the visual editor...[screenshot]
-To understand our project, let's take a moment at what happened when you create a blog post on builder. 
+:::caution
+Before You can create new content in Builder, make sure the preview URL for your model is working. See the [instructions](xxx) above. 
+:::
 
-until here draft 1
----
-
-To add new content, go to the content section by clicking in the **Content** tab. Click on *new* and choose the model for your blogpost. If You followed the steps under [integrating with Astro] and everything worked, you should see something like this: 
+To add new content, go to the **Content** tab, then click on *+ New* and choose the `blogpost` model You've just created. If You followed the steps under [integrating with Astro] and everything worked, you should see something like this: 
 
 [screenshot with empty blogpost]
 
@@ -269,19 +267,16 @@ When You're ready click on the big blue `Publish` in the upper right.
 
 The content is now live in the Builder CMS. 
 
-you can preview it already using the preview URL?
-
 To actually connect this content with your website, you'll create a catch-all route that fetches and renders it.
 
-### Creating the component representing a blog post 
-### Displaying the Content of a Blogpost
+### Creating the component for a blog post 
+### Displaying the content of a blogpost
 
-return to your Astro ptoject and create the following file:
+Return to your Astro ptoject and create the following file:
 
 <FileTree title="Project Structure">
     - src/pages/posts/**[slug].astro** - .env - astro.config.mjs - package.json
 </FileTree>
-
 
 On this page, you'll again fetch all the slugs of your content - you'll need them at build time to create all of your routes statically. 
 
@@ -467,11 +462,13 @@ To display each blogpost you'll create a catch-all route [xxx] matching the rout
 
 ## TODO
 [x] write draft
-[x] follow the tutorial: general connecting  
+[x] follow the tutorial: general connecting  ("part 1")
 * its a little odd to find <BaseLayout> in the very first code example
 * also, BUILDER_BLOGPOST_MODEL
 * might simplify the first part by making it a **page** model
-[] follow the tutorial: build blog
+[] follow the tutorial: build blog ("part 2")
+* problem with the flow of the instructions: there is no mention of the preview URL. idea 1: leave part 1 to be a content section model, then just assume that and build on that. idea 2: link back to the preview URL / mention it again. idea 3: give the instructions again
+* i feel the sections could be a little more unified. this might make it easier to follow. things that stick out: <FileTree> is used sometimes, sometimes not; steps are sometimes numbered, sometimes not. 
 [] dynamic preview URL??????
 [] go through stars * notes
 [] fix typos -- AI
