continue TESTING part 2

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -278,21 +278,25 @@ Return to your Astro ptoject and create the following file:
     - src/pages/posts/**[slug].astro** - .env - astro.config.mjs - package.json
 </FileTree>
 
-On this page, you'll again fetch all the slugs of your content - you'll need them at build time to create all of your routes statically. 
+Then add the following content: 
 
-Then, for each slug, you'll fetch the HTML content of the blogpost using Builder's `QWIK API` [xxx]. This is the stuff you dragged-and-dropped in Builder's visual editor. 
-
-To connect your newly created blog model to your Astro project, create a new folder named `pages` in your `src` directory, a `posts` folder within that and add a file called `[...slug].astro` with the following content:
-
-```astro title="src/pages/posts/[...slug].astro"
+```astro title="src/pages/posts/[slug].astro"
 ---
-const builderModel = 'blogPost'
+    import BaseLayout from "../../layouts/BaseLayout.astro";
+
+const builderModel = 'blogpost'
+const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
+
 
 // fetch all posts, just as in the previous step
 // 💥 TO REVIEWER: open to suggestions how to simplify this
 export async function getStaticPaths() {
+  const builderModel = 'blogpost'
+  const builderAPIpublicKey = import.meta.env.BUILDER_API_PUBLIC_KEY;
+
+
     const { results: posts } = await fetch(
-        `https://cdn.builder.io/api/v2/content/${builderModel}?${new URLSearchParams(
+        `https://cdn.builder.io/api/v3/content/${builderModel}?${new URLSearchParams(
             {
                 apiKey: builderAPIpublicKey,
                 fields: ["data.slug", "data.title"].join(","),
@@ -338,6 +342,18 @@ const { html: postHTML } = await fetch(
     <Fragment set:html={postHTML} />
 </BaseLayout>
 ```
+
+::: caution
+This code is relying on the fact that each content entry in the `blogpost` model has in fact fields called `title` and `slug`, so make sure these fields are required and all pieces of content have them, including those that might have been created before. It's best to create a new model with the proper rules set up from the beginning for that reason. 
+:::
+
+On this page, you'll again fetch all the slugs of your content - you'll need them at build time to create all of your routes statically. 
+
+Then, for each slug, you'll fetch the HTML content of the blogpost using Builder's `QWIK API` [xxx]. This is the stuff you dragged-and-dropped in Builder's visual editor. 
+
+To connect your newly created blog model to your Astro project, create a new folder named `pages` in your `src` directory, a `posts` folder within that and add a file called `[...slug].astro` with the following content:
+
+---
 
 This file generates a [dynamic route](https://docs.astro.build/en/core-concepts/routing/#static-ssg-mode) for each blog post based on the `slug` custom data field You filled when You created your blogpost on Builder. The HTML used here is made of the blocks You put on the page in Builder's editor!    
 
