--- a/src/content/docs/en/concepts/why-astro.mdx
+++ b/src/content/docs/en/concepts/why-astro.mdx
@@ -18,7 +18,7 @@ Why choose Astro over another web framework? Here are five core design principle
 
 ## Content-focused
 
-**Astro was designed for building content-rich websites.** This includes most marketing sites, publishing sites, documentation sites, blogs, portfolios, and some ecommerce sites.
+**Astro was designed for building content-rich websites.** This includes most marketing sites, publishing sites, documentation sites, blogs, portfolios, and some ecommerce sites. Astro sites can have interactivity, but Astro was not designed to share client-side state across routes. For example, you can create a cool interactive menu on one page, but when the user switches pages, you can not keep the menu open when the new page loads.
 
 By contrast, most modern web frameworks are designed for building *web applications*. These frameworks work best for building more complex, application-like experiences in the browser: logged-in admin dashboards, inboxes, social networks, todo lists, and even native-like applications like [Figma](https://figma.com/) and [Ping](https://ping.gg/).
 
