META tidy up notes

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -462,15 +462,7 @@ Now each time You click on the **Publish** button, Builder lets our hosting prov
 
 ## UNUSED copy
 To display each blogpost you'll create a catch-all route [xxx] matching the route `/posts/${slug}` from the previous step [xxx].
-
-## NOTES
-* explain how to structure the data of a blogpost? - what to put in a data field and what to put directly via Builder's drag and drop?
-*** might make more sense to work with components here?
-* following storyblok tutorial this would all be pre-given content and less of a suggestion
-* mb suggest creating a second blog post so we can show the listing of posts later a little more clearly
 * Since you'll be using the name of this model in each API call, it makes sense to set it as an environment variable. See the previous section on how to do that [xxx]. 
-* handling of the error handling? - export funciton?
-* clean up code - import scripts.js in <Baselayout>
 
 ## TODO
 [x] write draft
@@ -482,13 +474,21 @@ To display each blogpost you'll create a catch-all route [xxx] matching the rout
 * problem with the flow of the instructions: there is no mention of the preview URL. idea 1: leave part 1 to be a content section model, then just assume that and build on that. idea 2: link back to the preview URL / mention it again. idea 3: give the instructions again
 * i feel the sections could be a little more unified. this might make it easier to follow. things that stick out: <FileTree> is used sometimes, sometimes not; steps are sometimes numbered, sometimes not. 
 * make it more concrete: tell what title and what slug to put in (makes it simpler later on)
-[] dynamic preview URL??????
-[] go through stars * notes
+[x] dynamic preview URL??????
+[] go through stars * notes, mb make TODOs out of them
+* settle on tone; structure of steps; tutorial project structure (remove Baselayout?) --- look at other docs 
+[] unify tone --- AI, other astro stuff
 [] fix typos -- AI
-[] go through code -- AI 
+[] go through code -- AI - import scripts.js in <Baselayout> 
 [] revise, simplify, clarify -- AI
 [] add links
 [] add screenshots 
-[] unify tone --- AI, other astro stuff
+[] preview site
+[] revise again --- AI
 [] write PR --- mention new ideas
 [] ask Discord about squashing commits
+
+## FURTHER ideas
+* do this with an integration 
+* add section for SSR whatever that is
+* 🧠 High level stuff: explain how to structure the data of a blogpost - what to put in a data field and what to put directly via Builder's drag and drop. might be more of a tutorial about how to map builder templates to components
