--- a/src/content/docs/en/reference/integrations-reference.mdx
+++ b/src/content/docs/en/reference/integrations-reference.mdx
@@ -330,7 +330,7 @@ The address, family and port number supplied by the [NodeJS Net module](https://
 **Why:** To access generated routes and assets for extension (ex. copy content into the generated `/assets` directory). If you plan to transform generated assets, we recommend exploring the [Vite Plugin API](https://vitejs.dev/guide/api-plugin.html) and [configuring via `astro:config:setup`](#updateconfig-option) instead.
 
 ```js
-'astro:build:done'?: (options: { dir: URL; routes: RouteData[] }) => void | Promise<void>;
+'astro:build:done'?: (options: { dir: URL; routes: RouteData[], pages: PageData[] }) => void | Promise<void>;
 ```
 
 #### `dir` option
@@ -361,7 +361,7 @@ export default function myIntegration() {
 
 **Type:** [`RouteData[]`](#routedata-type-reference)
 
-A list of all generated routes alongside their associated metadata. **This will be empty when using an SSR adapter!**
+A list of all generated routes alongside their associated metadata.
 
 You can reference the full `RouteData` type below, but the most common properties are:
 
@@ -403,6 +403,21 @@ interface RouteData {
    * This is typically for internal use, so call with caution!
    */
   generate: (data?: any) => string;
+}
+```
+
+#### `pages` option
+
+**Type**: [`PageData[]`](#pagedata-type-reference)
+
+A list of all generated pages. It has one property `pathname` which is the finalized path of the page.
+
+##### `PageData` type reference
+
+```ts
+interface PageData {
+  /** The path of the page */
+  pathname: string;
 }
 ```
 
