Remove types section

--- a/src/content/docs/en/reference/integrations-reference.mdx
+++ b/src/content/docs/en/reference/integrations-reference.mdx
@@ -408,18 +408,9 @@ interface RouteData {
 
 #### `pages` option
 
-**Type**: [`PageData[]`](#pagedata-type-reference)
+A list of all generated pages. It is an object with one property.
 
-A list of all generated pages. It has one property `pathname` which is the finalized path of the page.
-
-##### `PageData` type reference
-
-```ts
-interface PageData {
-  /** The path of the page */
-  pathname: string;
-}
-```
+- `pathname` - the finalized path of the page.
 
 ## Allow installation with `astro add`
 
