--- a/src/content/docs/es/guides/cms/tina-cms.mdx
+++ b/src/content/docs/es/guides/cms/tina-cms.mdx
@@ -150,4 +150,4 @@ Para empezar, necesitarás un proyecto Astro existente.
 
 ## Recursos de la comunidad 
 
-- [Astro Tina Starter](https://github.com/tombennet/astro-tina-starter/tree/main) por Tom Bennet
+- [Plantilla de inicio de Tina con Astro](https://github.com/tombennet/astro-tina-starter/tree/main) por Tom Bennet
