--- a/src/content/docs/es/guides/client-side-scripts.mdx
+++ b/src/content/docs/es/guides/client-side-scripts.mdx
@@ -68,7 +68,7 @@ Para evitar el empaquetado del script, puedes utilizar la directiva `is:inline`.
 ```
 
 :::note
-El comportamiento de empaquetado predeterminado de Astro se desactivará en algunas situaciones. En particular, al agregar `type=module` o cualquier otro atributo que no sea `src` a la etiqueta `<script>` hará que Astro lo trate como si tuviera un `is:inline`. Lo mismo ocurrirá cuando el script esté escrito dentro de una expresión JSX.
+El comportamiento de empaquetado predeterminado de Astro se desactivará en algunas situaciones. En particular, al agregar `type=module` o cualquier otro atributo que no sea `src` a la etiqueta `<script>` hará que Astro lo trate como si tuviera una directiva `is:inline`. Lo mismo ocurrirá cuando el script esté escrito dentro de una expresión JSX.
 :::
 
 📚 Consulta nuestra página de [referencia de directivas](/es/reference/directives-reference/#directivas-script--style) para obtener más información sobre las directivas disponibles en las etiquetas `<script>`.
